--- a/css/style.css
+++ b/css/style.css
@@ -637,6 +637,73 @@ letter-spacing:0.2em;
 letter-spacing:0.2em;
 }
 
+ .slider-holder
+        {
+            width: 800px;
+            height: 400px;
+            background-color: yellow;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 0px;
+            text-align: center;
+            overflow: hidden;
+        }
+        
+        .image-holder
+        {
+            width: 2400px;
+            background-color: red;
+            height: 400px;
+            clear: both;
+            position: relative;
+            
+            -webkit-transition: left 2s;
+            -moz-transition: left 2s;
+            -o-transition: left 2s;
+            transition: left 2s;
+        }
+        
+        .slider-image
+        {
+            float: left;
+            margin: 0px;
+            padding: 0px;
+            position: relative;
+			 width: 800px;
+            height: 400px;
+        }
+        
+        #slider-image-1:target ~ .image-holder
+        {
+            left: 0px;
+        }
+        
+        #slider-image-2:target ~ .image-holder
+        {
+            left: -800px;
+        }
+        
+        #slider-image-3:target ~ .image-holder
+        {
+            left: -1600px;
+        }
+        
+        .button-holder
+        {
+            position: relative;
+            top: -20px;
+        }
+        
+        .slider-change
+        {
+            display: inline-block;
+            height: 10px;
+            width: 10px;
+            border-radius: 5px;
+            background-color: brown;
+        }
+
+
 .fh5co-about .fh5co-heading h2{
 	font-size: 40px;
 	font-weight: 400;
@@ -794,6 +861,17 @@ letter-spacing:0.2em;
   transition: 0.3s;
   top: 2px;
 }
+
+#fh5co-blog-section h2 {
+  font-size: 40px;
+  font-weight: 400;
+  text-shadow:3px 2px #C0C0C0;
+  font-style:normal
+}
+#fh5co-blog-section p i{
+letter-spacing:0.2em;
+}
+
 #fh5co-blog-section .item-grid .image {
   height: 400px;
   overflow: hidden;
@@ -968,8 +1046,12 @@ letter-spacing:0.2em;
   color: #fff;
 }
 
+#fh5co-footer [class*="col"] {
+    padding-bottom: 0
+}
+
 #fh5co-footer {
-  padding: 7em 0;
+  padding: 7em 0 0 0;
   float: left;
   width: 100%;
   position: relative;
@@ -1238,6 +1320,17 @@ letter-spacing:0.2em;
   }
 }
 
+
+#fh5co-pricing-section h2 {
+  font-size: 40px;
+  font-weight: 400;
+  text-shadow:3px 2px #C0C0C0;
+  font-style:normal
+}
+#fh5co-pricing-section p i{
+letter-spacing:0.2em;
+}
+
 #fh5co-pricing-section {
   padding: 7em 0;
   background: #fcfcfc;
@@ -1291,6 +1384,8 @@ letter-spacing:0.2em;
   text-transform: uppercase;
   font-weight: 700;
   color: #888f94;
+  font-style:normal;
+  color:#27c1e1
 }
 #fh5co-pricing-section .pricing-plan.pricing-plan-offer {
   margin-bottom: 24px;
