--- a/css/style.css
+++ b/css/style.css
@@ -541,6 +541,8 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-blog-section {
   padding: 7em 0;
 }
+
+
 @media screen and (max-width: 768px) {
   #fh5co-services-section, #fh5co-work-section, #fh5co-testimony-section,
   #fh5co-blog-section {
@@ -550,6 +552,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 #fh5co-services-section .services {
   position: relative;
+   background-image:url("images\a1.jpg");
 }
 
 
@@ -562,6 +565,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-services-section .services .desc {
   padding-left: 70px;
+ 
 }
 #fh5co-services-section .services .desc h3 {
   font-size: 20px;
@@ -953,6 +957,15 @@ letter-spacing:0.2em;
     padding: 3em 0 10px 0;
   }
 }
+.fh5co-contact h2 {
+  font-size: 40px;
+  font-weight: 400;
+  text-shadow:3px 2px #C0C0C0;
+  font-style:normal
+}
+.fh5co-contact p i{
+letter-spacing:0.2em;
+}
 
 .contact-info {
   margin-bottom: 4em;
@@ -1051,7 +1064,7 @@ letter-spacing:0.2em;
 }
 
 #fh5co-footer {
-  padding: 7em 0 0 0;
+  padding: 2em 0 0 0;
   float: left;
   width: 100%;
   position: relative;
@@ -1072,7 +1085,7 @@ letter-spacing:0.2em;
   font-weight: bold;
 }
 #fh5co-footer [class*="col"] {
-  padding-bottom: 30px;
+  /*padding-bottom: 30px;*/
 }
 #fh5co-footer .btn {
   color: #fff;
@@ -1086,7 +1099,6 @@ letter-spacing:0.2em;
   margin: 0;
 }
 #fh5co-footer ul li {
-  padding: 0;
   margin: 0 0 10px 0;
   list-style: none;
 }
@@ -1422,3 +1434,127 @@ letter-spacing:0.2em;
 }
 
 /*# sourceMappingURL=style.css.map */
+
+/* personal css*/
+.row > .column {
+  padding: 0 8px;
+}
+
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.column {
+  float: left;
+  width: 25%;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 80px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: auto;
+  background-color: black;
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  width: 100%;
+  max-width: 1200px;
+}
+
+/* The Close Button */
+.close {
+  color: aqua;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: aqua;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.mySlides {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+.caption-container {
+  text-align: center;
+  background-color: black;
+  padding: 2px 16px;
+  color: white;
+}
+
+img.demo {
+  opacity: 0.6;
+}
+
+.active,
+.demo:hover {
+  opacity: 1;
+}
+
+img.hover-shadow {
+  transition: 0.3s
+}
+
+.hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+}
