--- a/css/style.css
+++ b/css/style.css
@@ -467,8 +467,11 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #fh5co-hero {
-  min-height: 700px;
-  background: #fff url(../images/loader.gif) no-repeat center center;
+  background: #fff url(../images/valji_image2.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  min-height: 400px;
 }
 #fh5co-hero .btn {
   font-size: 24px;
@@ -486,6 +489,8 @@ h1, h2, h3, h4, h5, h6, figure {
   overflow: hidden;
 }
 #fh5co-hero .flexslider .slides li {
+  opacity: 0.5;
+  filter: alpha(opacity=50); /* For IE8 and earlier */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -520,9 +525,11 @@ h1, h2, h3, h4, h5, h6, figure {
   min-height: 700px;
 }
 #fh5co-hero .flexslider .slider-text > .slider-text-inner h2 {
+  display:block;
   font-size: 70px;
   font-weight: 400;
   color: #fff;
+  z-index:101
 }
 @media screen and (max-width: 768px) {
   #fh5co-hero .flexslider .slider-text > .slider-text-inner h2 {
@@ -564,13 +571,34 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #27E1CE;
 }
 #fh5co-services-section .services .desc {
-  padding-left: 70px;
+  padding-right:10px;
+  padding-left:10px
  
 }
 #fh5co-services-section .services .desc h3 {
-  font-size: 20px;
   font-weight: 700;
+  margin: 0 0 0 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #27E1DD;
+  color:#ffffff;
+  text-transform: uppercase;
+  border-color:#555555;
+  border-radius:50px;
+  text-align:center;
 }
+#fh5co-services-section .services .desc p{
+	margin-top:20px;
+	padding-left:10px;
+	padding-right:10px;
+	padding-bottom:20px;
+	border-bottom-style:groove;
+	border-right-style:ridge;
+	border-left-style:ridge;
+	border-bottom-width:10dp;
+	text-align:center
+	}
+	
 #fh5co-services-section h2 {
   font-size: 40px;
   font-weight: 400;
@@ -587,8 +615,28 @@ letter-spacing:0.2em;
 .bordershadow {
 	border: 3px solid ;
 	border-image:   linear-gradient(to right, green 25%, yellow 50%,red 75%, black 100%) 100;
+	background: #fff url(../images/valji_image.jpg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
 }
-	
+
+.bordershadow-blue{
+	border: 3px solid ;
+	border-image:   linear-gradient(to right, #27E1CE 25%, #30DEFE 50%,#30DEFE 75%, #27E1CE 100%) 100;
+
+}
+
+.jumbotron p{
+    margin-bottom: 15px;
+    font-size: 21px;
+    font-weight: 600;	
+}
+
+.opacity-box{
+  opacity: 0.2;
+  filter: alpha(opacity=50); /* For IE8 and earlier */
+}
 
 #fh5co-work-section .item-grid {
   width: 100%;
@@ -613,13 +661,20 @@ letter-spacing:0.2em;
 #fh5co-work-section .item-grid .v-align {
   padding: 30px;
 }
+
 #fh5co-work-section .item-grid .v-align h3 {
   font-weight: 700;
   font-size: 20px;
 }
+
+.title{
+	  color:#C9C9C9
+	  }
+
 #fh5co-work-section .item-grid .v-align h5 {
   color: rgba(0, 0, 0, 0.3);
 }
+
 #fh5co-work-section .item-grid:hover, #fh5co-work-section .item-grid:focus {
   text-decoration: none;
   -webkit-box-shadow: 0px 14px 25px -2px rgba(0, 0, 0, 0.14);
@@ -877,10 +932,13 @@ letter-spacing:0.2em;
 }
 
 #fh5co-blog-section .item-grid .image {
+  overflow-y: hidden ! important;
+  overflow-x: hidden ! important;
   height: 400px;
   overflow: hidden;
   margin-bottom: 20px;
-  background-size: cover;
+  background-repeat: no-repeat;
+  background-size: contain;
   background-position: center center;
 }
 #fh5co-blog-section .item-grid .v-align {
@@ -888,7 +946,10 @@ letter-spacing:0.2em;
 }
 #fh5co-blog-section .item-grid .v-align h3 {
   font-weight: 700;
-  font-size: 20px;
+  text-align:center;
+  text-decoration:none;
+  font-size:1.5em;
+  font-family:aerial black
 }
 #fh5co-blog-section .item-grid .v-align h5 {
   color: rgba(0, 0, 0, 0.3);
@@ -1167,7 +1228,7 @@ letter-spacing:0.2em;
   right: 0;
   overflow-y: auto;
   position: fixed;
-  z-index: 1;
+  /*z-index: 1;*/
   top: 0;
   width: 275px;
   background: black;
@@ -1460,7 +1521,7 @@ letter-spacing:0.2em;
   left: 0;
   top: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow: auto;
   background-color: black;
 }
@@ -1480,7 +1541,7 @@ letter-spacing:0.2em;
   color: aqua;
   position: absolute;
   top: 10px;
-  right: 25px;
+  left: 25px;
   font-size: 60px;
   font-weight: bold;
 }
