--- a/css/index.css
+++ b/css/index.css
@@ -40,8 +40,8 @@ html, body{
 
 .loader-text {
   color: #f1f3f6;
-  text-shadow: 3px 3px 6px rgba(10, 10, 10, 0.1),
-  -4px -4px 8px rgba(255,255,255);
+  text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1),
+  -3px -3px 6px rgba(255,255,255);
   outline: none;
   font-size: 2em;
   text-transform:uppercase;
@@ -61,9 +61,9 @@ html, body{
 }
 
 .fingerprint-text {
-  /*color: #f1f3f6;*/
-  text-shadow: 3px 3px 6px rgba(10, 10, 10, 0.1),
-  -4px -4px 8px rgba(255,255,255);
+  color: #f1f3f6;
+  text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1),
+  -3px -3px 6px rgba(255,255,255);
   outline: none;
   font-size: 2em;
   text-transform:uppercase;
@@ -84,6 +84,26 @@ svg {
 
 .prints {
   opacity: 0;
+}
+
+.div {
+  position: relative;
+  width: 10vh;
+  height: 10vh;
+  background: #f1f3f6;
+  border-radius: 10px;
+  box-shadow: 
+    inset 0 0 15px rgba(55, 84, 170, 0), 
+    inset 0 0 20px rgba(255, 255, 255, 0), 
+    10px 10px 18px rgba(55, 84, 170, 0.15), 
+    -10px -10px 22px white, 
+    inset 0px 0px 4px rgba(255, 255, 255, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  outline: none;
+  border: none;
+  font-size: 0;
 }
 
 .button {
