--- a/css/index.css
+++ b/css/index.css
@@ -13,8 +13,19 @@
   src: url(../fonts/Comfortaa-Bold.ttf);
 }
 
+:root {
+  --primary-light: #8abdff;
+  --primary: #6d5dfc;
+  --primary-dark: #5b0eeb;
+  --white: #FFFFFF;
+  --greyLight-1: #E4EBF5;
+  --greyLight-2: #c8d0e7;
+  --greyLight-3: #bec8e4;
+  --greyDark: #9baacf;
+}
+
 body {
-  background-color: #f1f3f6;
+  background-color: var(--greyLight-1);
   color: #484849;
   font-family: comfortaa-light;
 }
@@ -39,9 +50,9 @@ html, body{
 }
 
 .loader-text {
-  color: #f1f3f6;
-  text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1),
-  -3px -3px 8px rgba(255,255,255);
+  color: var(--greyLight-1);
+  text-shadow: 4px 4px 6px var(--greyLight-2),
+  -3px -3px 8px var(--white);
   outline: none;
   font-size: 2.5em;
   text-transform:uppercase;
@@ -60,30 +71,10 @@ html, body{
   text-align: center;
 }
 
-.div {
-  position: relative;
-  width: 10vh;
-  height: 10vh;
-  background: #f1f3f6;
-  border-radius: 10px;
-  box-shadow: 
-    inset 0 0 15px rgba(55, 84, 170, 0), 
-    inset 0 0 20px rgba(255, 255, 255, 0), 
-    10px 10px 18px rgba(55, 84, 170, 0.15), 
-    -10px -10px 22px white, 
-    inset 0px 0px 4px rgba(255, 255, 255, 0.2);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  outline: none;
-  border: none;
-  font-size: 0;
-}
-
 .fingerprint-text {
-  color: #f1f3f6;
-  text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.1),
-  -3px -3px 8px rgba(255,255,255);
+  color: var(--greyLight-1);
+  text-shadow: 4px 4px 6px var(--greyLight-2),
+  -3px -3px 8px var(--white);
   outline: none;
   font-size: 2.5em;
   text-transform:uppercase;
@@ -110,13 +101,13 @@ svg {
   position: relative;
   width: 120px;
   height: 120px;
-  background: #f1f3f6;
+  background: var(--greyLight-1);
   border-radius: 50%;
   box-shadow: 
     inset 0 0 15px rgba(55, 84, 170, 0), 
     inset 0 0 20px rgba(255, 255, 255, 0), 
     10px 10px 18px rgba(55, 84, 170, 0.15), 
-    -10px -10px 22px white, 
+    -10px -10px 25px var(--white), 
     inset 0px 0px 4px rgba(255, 255, 255, 0.2);
   transition: box-shadow 0.7s ease-in-out;
   display: flex;
@@ -127,11 +118,11 @@ svg {
   font-size: 0;
 }
 
-.button:active, .button:focus {
-  box-shadow: inset 7px 7px 15px rgba(55, 84, 170, 0.15), inset -7px -7px 20px white, 0px 0px 4px rgba(255, 255, 255, 0.2);
+.button:hover, .button:focus {
+  box-shadow: inset 7px 7px 15px rgba(55, 84, 170, 0.15), inset -7px -7px 20px var(--white), 0px 0px 4px rgba(255, 255, 255, 0.2);
 }
 
-.button:hover .draw {
+.button .draw {
   opacity: 0.4;
 }
 
@@ -199,7 +190,7 @@ svg {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: #f1f3f6;
+  background-color: var(--greyLight-1);
   top: 0;
   right: 0;
   animation: heartRateIn 3s linear infinite;
@@ -212,12 +203,12 @@ svg {
   top: 0;
   left: -120%;
   animation: heartRateOut 3s linear infinite;
-  background: rgba(241,243,246,1);
-  background: -moz-linear-gradient(left, rgba(241,243,246,1) 0%, rgba(241,243,246,1) 50%, rgba(241,243,246,0) 100%);
-  background: -webkit-linear-gradient(left, rgba(241,243,246,1) 0%, rgba(241,243,246,1) 50%, rgba(241,243,246,0) 100%);
-  background: -o-linear-gradient(left, rgba(241,243,246,1) 0%, rgba(241,243,246,1) 50%, rgba(241,243,246,0) 100%);
-  background: -ms-linear-gradient(left, rgba(241,243,246,1) 0%, rgba(241,243,246,1) 50%, rgba(241,243,246,0) 100%);
-  background: linear-gradient(to right, rgba(241,243,246,1) 0%, rgba(241,243,246,1) 80%, rgba(241,243,246,0) 100%);
+  background: var(--greyLight-1);
+  background: -moz-linear-gradient(left, rgba(228,235,245,1) 0%, rgba(228,235,245,1) 50%, rgba(228,235,245,0) 100%);
+  background: -webkit-linear-gradient(left, rgba(228,235,245,1) 0%, rgba(228,235,245,1) 50%, rgba(228,235,245,0) 100%);
+  background: -o-linear-gradient(left, rgba(228,235,245,1) 0%, rgba(228,235,245,1) 50%, rgba(228,235,245,0) 100%);
+  background: -ms-linear-gradient(left, rgba(228,235,245,1) 0%, rgba(228,235,245,1) 50%, rgba(228,235,245,0) 100%);
+  background: linear-gradient(to right, rgba(228,235,245,1) 0%, rgba(228,235,245,1) 80%, rgba(228,235,245,0) 100%);
 }
 
 @keyframes heartRateIn {
