--- a/css/index.css
+++ b/css/index.css
@@ -127,11 +127,11 @@ svg {
   font-size: 0;
 }
 
-.button:active, .button:focus {
+.button:hover, .button:focus {
   box-shadow: inset 7px 7px 15px rgba(55, 84, 170, 0.15), inset -7px -7px 20px white, 0px 0px 4px rgba(255, 255, 255, 0.2);
 }
 
-.button:hover .draw {
+.button .draw {
   opacity: 0.4;
 }
 
