--- a/css/index.css
+++ b/css/index.css
@@ -22,6 +22,7 @@
   --greyLight-2: #c8d0e7;
   --greyLight-3: #bec8e4;
   --greyDark: #9baacf;
+  --bg: #f1f3f6;
 }
 
 body {
@@ -269,7 +270,7 @@ svg {
   width: 12rem;
   height: 12rem;
   justify-self: center;
-  box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--white);
+  box-shadow: 0.3rem 0.3rem 0.6rem var(--greyLight-2), -0.2rem -0.2rem 0.5rem var(--bg);
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -311,14 +312,14 @@ svg {
   height: 95%;
   border-radius: 50%;
   position: relative;
-  box-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2), inset -0.2rem -0.2rem 0.5rem var(--white);
+  box-shadow: inset 0.2rem 0.2rem 0.5rem var(--greyLight-2), inset -0.2rem -0.2rem 0.5rem var(--bg);
 }
 .clock .marker::after {
   content: "";
   width: 60%;
   height: 60%;
   position: absolute;
-  box-shadow: inset 1px 1px 1px var(--greyLight-2), inset -1px -1px 1px var(--white);
+  box-shadow: inset 1px 1px 1px var(--greyLight-2), inset -1px -1px 1px var(--bg);
   border-radius: 50%;
   top: 20%;
   left: 20%;
@@ -327,7 +328,7 @@ svg {
 .clock .marker__1, .clock .marker__2, .clock .marker__3, .clock .marker__4 {
   position: absolute;
   border-radius: 0.1rem;
-  box-shadow: inset 1px 1px 1px var(--greyLight-2), inset -1px -1px 1px var(--white);
+  box-shadow: inset 1px 1px 1px var(--greyLight-2), inset -1px -1px 1px var(--bg);
 }
 .clock .marker__1, .clock .marker__2 {
   width: 0.2rem;
